# kiosk-aggregator-cron

./: .env.example  .gitignore  Cargo.toml  GET_STARTED_NOW.md  README.md  a.txt  balances.txt  check_balances.sh  garden_swaps.db  garden_swaps.db-shm  garden_swaps.db-wal  outputCopy.txt  test_bitcoin_utxo_reuse.sh  test_bitcoin_wallet.sh
docs/: ADDING_CHAIN_SUPPORT.md  BALANCE_CHECK_CONFIGURATION.md  BALANCE_CHECK_FLAG.md  BALANCE_CHECK_TEST_RESULTS.md  BATCH_PROCESSING.md  BITCOIN_SEQUENTIAL_EXECUTION.md  BITCOIN_SIGNER_IMPLEMENTATION.md  BITCOIN_SWAP_FLOW.md  BITCOIN_SWAP_INTEGRATION.md  BITCOIN_UTXO_REUSE.md  CHANGES_TRON_STARKNET.md  COMPREHENSIVE_SWAP_SUMMARY.md  COST_OPTIMIZATION.md  CURRENT_STATUS_AND_NEXT_STEPS.md  DISCORD_BOT.md  DISCORD_BOT_ARCHITECTURE.md  DISCORD_BOT_AUTOCOMPLETE.md  DISCORD_BOT_CHECKLIST.md  DISCORD_BOT_COUNTDOWN.md  DISCORD_BOT_ENV_FIX.md  DISCORD_BOT_FILES.md  DISCORD_BOT_IMPLEMENTATION.md  DISCORD_BOT_IMPROVEMENTS.md  DISCORD_BOT_IMPROVEMENTS_SUMMARY.md  DISCORD_BOT_NOTIFICATION_FORMAT.md  DISCORD_BOT_OUTPUT_FILTERING.md  DISCORD_BOT_PERFORMANCE_OPTIMIZATION.md  DISCORD_BOT_QUICK_START.md  DISCORD_BOT_SUMMARY.md  DISCORD_BOT_TESTING.md  DISCORD_BOT_TIMEOUT_CONFIG.md  DISCORD_BOT_TIMEOUT_FIX.md  DISCORD_BOT_VALIDATION_AND_USD.md  DISCORD_COMMAND_REFERENCE.md  ENV_VARIABLES_REQUIRED.md  ETH_SOL_SWAP_TEST_RESULTS.md  EXAMPLES.md  FINAL_CONCLUSION.md  FINAL_STATUS_AND_NEXT_STEPS.md  FINAL_SUMMARY.md  (+34 more)
src/: main.rs
src/api/: mod.rs
src/chains/: balance_checker.rs  bitcoin_provider.rs  bitcoin_signer.rs  evm_signer.rs  mod.rs  mod_new.rs  (+4 more)
(+12 files in other folders)
