[package]
name = "kiosk-aggregator-cron"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls", "cookies"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
anyhow = "1"
thiserror = "1"
tokio-cron-scheduler = "0.10"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
dotenv = "0.15"
rusqlite = { version = "0.31", features = ["bundled", "chrono"] }
async-trait = "0.1"
ethers = { version = "2", features = ["rustls"] }
solana-sdk = "2.0"
solana-client = "2.0"
bs58 = "0.5"
base64 = "0.22"
bincode = "1.3"
